<?xml version="1.0"?>
<package>
    <name>closed_loop</name>
    <version>0.0.1</version>
    <description>The closed_loop package</description>

    <maintainer email="tobit.flatscher@outlook.com">tobit</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
    
