<?xml version="1.0"?>
<package>
    <name>closed_loop</name>
    <version>0.0.1</version>
    <description>A demo package showing how parallel robots can be simulated with Gazebo starting from a URDF with serial chains.</description>

    <maintainer email="tobit.flatscher@outlook.com">Tobit Flatscher</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
    
