<?xml version="1.0"?>
<package>
  <name>urdf_sdf</name>
  <version>0.0.1</version>
  <description>The urdf_sdf package</description>
  
  <maintainer email="tobit.flatscher@outlook.com">tobit</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
    
